Sun Dec  8 12:29:52 1996  Tom Tromey  <tromey@cygnus.com>

	* automake.in (variable_value_as_list): Handle := substitution
	references.
	(am_conf_line_error): Take file argument.  Changed all callers.
	(scan_one_configure_file): Skip config header of [$1].
	(scan_dependency_file): Don't add top_builddir to regex if it is
	".".  Don't include top_builddir in output if it is ".".
	(scan_one_configure_file): Skip version of [$2].

Sat Dec  7 11:34:39 1996  Tom Tromey  <tromey@cygnus.com>

	* automake.in (scan_one_configure_file): New sub.
	(scan_configure): Scan aclocal.m4 as well as configure.in.
	(handle_configure): Makefile.in now depends on $(ACLOCAL), because
	automake scans it.

	* automake.in (handle_configure): Put full path to file onto
	@rewritten_inputs.  Test output4.test.

	* automake.in (handle_configure): Put proper name onto @inputs.
	Test output3.test.

	* automake.in (handle_configure): Pass correct args to automake
	invocations.  Test remake2.test.

	* automake.in (handle_configure): Check dirname of $file, not of
	$local.  Test output2.test.

	* automake.in (handle_dependencies): Added some missing ";"s in
	transforms.
	(get_object_extension): Ditto.
	(handle_tags): Ditto.
	(handle_tests): Ditto.
	(read_am_file): Ditto.
	(am_install_var): Ditto.
	(file_contents_with_transform): Die if transform missing trailing
	";".

	* automake.in (am_install_var): Quote $ in regexp substitution.
	From Ulrich Drepper.

Fri Dec  6 18:54:10 1996  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_configure): Require actual input files, not
	rewritten input files.  From Ulrich Drepper.

Thu Dec  5 02:52:20 1996  Tom Tromey  <tromey@cygnus.com>

	Suggestion from Mark Galassi:
	* texinfos.am (DVIPS): New macro.
	(.dvi.ps): New rule.

	* automake.in (handle_dependencies): Check to make sure
	--build-directory specified before searching for .P files.
	(handle_configure): Correctly handle ":" syntax when running
	config.status.
