@@ -1,29 +1,22 @@
 Priorities for release:
 !! documentation (eg new macros)
-!! finish up TAGS work
-* `acinstall'
-* echo in installs?
-* `missing' program
 * copyrights on m4 files, aclocal output
 
 For now I guess I'll just have automake give an error if it encounters
 non-C source in a libtool library specification.
 
-
 * must split $obj into two parts: one for libtool and one for
   deansification.  Otherwise .S files will be deansified!
-
-* look @ jim's $(t:=foo) problem
 
 * should install-foo target for a new dir (eg fooexecdir) be run via
   install-data or install-exec?  Consider examining name of variable.
 
-* compatibility with older versions of autoconf if not --gnu
-
 ================================================================
 
+* finish up TAGS work
+* `acinstall'
+* `missing' program
 * CONFIG_HEADER is passed incorrectly in ":" mode.
-
 * put parser.h into distribution if "yacc -d" is used
 
 * only remove libtool at top level?
@@ -38,16 +31,9 @@ rewritten.  Or, fix automake so that not all sources in a directory
 must be ansi.  Should also fix things so that a separate ._o file is
 not needed; instead use a wrapper script.
 
-Gord on pretty-printing instead of raw loops:
-Gord> I think the best thing to do is to have make output be a valid shell
-Gord> script, and to have it be clear exactly what is happening at a given
-Gord> time.
-
 
 Further:
 - man page fixes
-- consider adding "echo"s to installs again.
-  users can use make SHELL='sh -x' to get the full dirt
 
 Avoid loops when installing; instead unroll them in automake
 
@@ -94,8 +80,6 @@ From Jason Molenda:
 * allow a way to use "gzip --best"
    [ Try  GZIP=--best make dist ]
 * don't assume GNU tar is "tar" (eg in distcheck)
-
-* actually use acinstall program
 
 !! Must fix require_file stuff.  It is really gross, and I don't
    understand it any more.
@@ -162,8 +146,7 @@ implemented by noticing whenever a ".o" target with no rules is being
 emitted, and adding the appropriate compilation rule as appropriate.
 This should work with targets from Makefile.am as well as from .P
 files, which means rewriting so that the Makefile.am contents aren't
-copied into the output immediately.  This feature is probably required
-to fully support libtool ("grody compilation issue")
+copied into the output immediately.
  [ this could be probably done more directly by examining the sources
    as we scan Makefile.am ]
 
@@ -196,13 +179,6 @@ Other priorities:
 * Rewrite clean targets.
 * Must rewrite error handling code.  Right now it is a real mess
   Should fix up require_file junk at the same time
-
-Things to finish libtool support:
-* Handle grody compilation issue
-  Namely: some objects require a different compilation rule
-* Handle install changes
-* Handle clean changes
-* New definition for LINK
 
 djm wants ``LINKS'' variable; list of things to link together after
 install.  In BSD environment, use:
@@ -322,8 +298,6 @@ some support for this.  Here are some of the issues:
 * Should handle AC_CONFIG_SUBDIRS, ie must handle configure.in in subdirs
     * can do this by looking at subdirs, seeing configure.in
       and auto-running Automake there
-
-. Consider supporting guile-style PLUGIN directories automatically?
 
 djm says:
 David> To avoid comments like the one about subdirs getting buried in
