@@ -20,10 +20,12 @@ install-@DIR@DATA: $(@DIR@_DATA)
 	$(mkinstalldirs) $(@DIR@dir)
 ## Funny invocation because Makefile variable can be empty, leading to
 ## a syntax error in sh.
-	list="$(@DIR@_DATA)"; for p in $$list; do \
+	@list="$(@DIR@_DATA)"; for p in $$list; do \
 	  if test -f $(srcdir)/$$p; then \
+	    echo "$(INSTALL_DATA) $(srcdir)/$$p $(@DIR@dir)/$$p"; \
 	    $(INSTALL_DATA) $(srcdir)/$$p $(@DIR@dir)/$$p; \
 	  else if test -f $$p; then \
+	    echo "$(INSTALL_DATA) $$p $(@DIR@dir)/$$p"; \
 	    $(INSTALL_DATA) $$p $(@DIR@dir)/$$p; \
 	  fi; fi; \
 	done
