@@ -20,7 +20,8 @@ install-@DIR@HEADERS: $(@DIR@_HEADERS)
 	$(mkinstalldirs) $(@DIR@dir)
 ## Funny invocation because Makefile variable can be empty, leading to
 ## a syntax error in sh.
-	list="$(@DIR@_HEADERS)"; for p in $$list; do \
+	@list="$(@DIR@_HEADERS)"; for p in $$list; do \
+	  echo "$(INSTALL_DATA) $(srcdir)/$$p $(@DIR@dir)/$$p"; \
 	  $(INSTALL_DATA) $(srcdir)/$$p $(@DIR@dir)/$$p; \
 	done
 
