@@ -20,10 +20,12 @@ install-@DIR@LISP: $(@DIR@_LISP) $(ELCFILES)
 	$(mkinstalldirs) $(@DIR@dir)
 ## Funny invocation because Makefile variable can be empty, leading to
 ## a syntax error in sh.
-	list="$(@DIR@_LISP)"; for p in $$list; do \
+	@list="$(@DIR@_LISP)"; for p in $$list; do \
+	  echo "$(INSTALL_DATA) $(srcdir)/$$p $(@DIR@dir)/$$p"; \
 	  $(INSTALL_DATA) $(srcdir)/$$p $(@DIR@dir)/$$p; \
 ## Only install .elc file if it exists.
 	  if test -f $${p}c; then \
+	    echo "$(INSTALL_DATA) $${p}c $(@DIR@dir)/$${p}c"; \
 	    $(INSTALL_DATA) $${p}c $(@DIR@dir)/$${p}c; \
 	  else : ; fi; \
 	done
