@@ -29,9 +29,10 @@ installdirs-recursive install-recursive uninstall-recursive @INSTALLINFO@ \
 check-recursive installcheck-recursive info-recursive dvi-recursive \
 mostlyclean-recursive clean-recursive distclean-recursive \
 maintainer-clean-recursive:
-	for subdir in $(SUBDIRS); do		\
+	@for subdir in $(SUBDIRS); do \
 	  target=`echo $@ | sed s/-recursive//`; \
-	  (cd $$subdir && $(MAKE) $$target)	\
+	  echo "Making $$target in $$subdir"; \
+	  (cd $$subdir && $(MAKE) $$target) \
 ## This trick allows "-k" to keep its natural meaning when running a
 ## recursive rule.
 	   || case "$(MFLAGS)" in *k*) fail=yes;; *) exit 1;; esac; \
