@@ -22,6 +22,7 @@ install-@DIR@LIBRARIES: $(@DIR@_LIBRARIES)
 ## a syntax error in sh.
 	list="$(@DIR@_LIBRARIES)"; for p in $$list; do \
 	  if test -f $$p; then \
+	    echo "$(INSTALL_DATA) $$p $(@DIR@dir)/$$p"; \
 	    $(INSTALL_DATA) $$p $(@DIR@dir)/$$p; \
 	  else :; fi; \
 	done
@@ -31,9 +32,10 @@ install-@DIR@LIBRARIES: $(@DIR@_LIBRARIES)
 ## useless; sh never actually executes this command.  Read the GNU
 ## Standards for a little enlightenment on this.
 	$(POST_INSTALL)
-	list="$(@DIR@_LIBRARIES)"; for p in $$list; do \
+	@list="$(@DIR@_LIBRARIES)"; for p in $$list; do \
 	  if test -f $$p; then \
 ## Must ranlib after installing because mod time changes.
+	    echo "$(RANLIB) $(@DIR@dir)/$$p"; \
 	    $(RANLIB) $(@DIR@dir)/$$p; \
 	  else :; fi; \
 	done
