@@ -20,10 +20,11 @@ install-@DIR@PROGRAMS: $(@DIR@_PROGRAMS)
 	$(mkinstalldirs) $(@DIR@dir)
 ## Funny invocation because Makefile variable can be empty, leading to
 ## a syntax error in sh.
-	list="$(@DIR@_PROGRAMS)"; for p in $$list; do \
+	@list="$(@DIR@_PROGRAMS)"; for p in $$list; do \
 	  if test -f $$p; then \
 ## Note that we explicitly set the libtool mode.  This avoids any lossage
 ## if the program doesn't have a name that libtool expects.
+	    echo "$(LIBTOOL) --mode=install $(INSTALL_PROGRAM) $$p $(@DIR@dir)/$$p"; \
 	    $(LIBTOOL) --mode=install $(INSTALL_PROGRAM) $$p $(@DIR@dir)/$$p; \
 	  else :; fi; \
 	done
