@@ -20,13 +20,14 @@ install-@DIR@PROGRAMS: $(@DIR@_PROGRAMS)
 	$(mkinstalldirs) $(@DIR@dir)
 ## Funny invocation because Makefile variable can be empty, leading to
 ## a syntax error in sh.
-	list="$(@DIR@_PROGRAMS)"; for p in $$list; do \
+	@list="$(@DIR@_PROGRAMS)"; for p in $$list; do \
 	  if test -f $$p; then \
 ## It is harmless to unconditionally use $(LIBTOOL) here because it
 ## will be null in non-libtoolized packages, and even if it is set to
 ## a real libtool, its behaviour is identical to normal INSTALL_PROGRAM.
 ## Note that we explicitly set the libtool mode.  This avoids any lossage
 ## if the program doesn't have a name that libtool expects.
+	    echo "@LIBTOOL@ $(INSTALL_PROGRAM) $$p $(@DIR@dir)/`echo $$p|sed '$(transform)'`"; \
 	    @LIBTOOL@ $(INSTALL_PROGRAM) $$p $(@DIR@dir)/`echo $$p|sed '$(transform)'`; \
 	  else :; fi; \
 	done
