@@ -20,12 +20,13 @@ install-@DIR@SCRIPTS: $(@DIR@_SCRIPTS)
 	$(mkinstalldirs) $(@DIR@dir)
 ## Funny invocation because Makefile variable can be empty, leading to
 ## a syntax error in sh.
-	list="$(@DIR@_SCRIPTS)"; for p in $$list; do \
+	@list="$(@DIR@_SCRIPTS)"; for p in $$list; do \
 	  if test -f $$p; then \
+	    echo "$(INSTALL_SCRIPT) $$p $(@DIR@dir)/`echo $$p|sed '$(transform)'`"; \
 	    $(INSTALL_SCRIPT) $$p $(@DIR@dir)/`echo $$p|sed '$(transform)'`; \
 	  else if test -f $(srcdir)/$$p; then \
-	    $(INSTALL_SCRIPT) $(srcdir)/$$p \
-	      $(@DIR@dir)/`echo $$p|sed '$(transform)'`; \
+	    echo "$(INSTALL_SCRIPT) $(srcdir)/$$p $(@DIR@dir)/`echo $$p|sed '$(transform)'`"; \
+	    $(INSTALL_SCRIPT) $(srcdir)/$$p $(@DIR@dir)/`echo $$p|sed '$(transform)'`; \
 	  else :; fi; fi; \
 	done
 
