@@ -1,5 +1,15 @@
 Sun Dec  8 12:29:52 1996  Tom Tromey  <tromey@cygnus.com>
 
+	* subdirs.am (maintainer-clean-recursive): Make commands quiet.
+	* texinfos.am: Make commands quiet.
+	* scripts.am: Make commands quiet.
+	* progs.am: Make commands quiet.
+	* ltlibs.am: Make comamnds quiet.
+	* lisp.am: Make commands quiet.
+	* libs.am: Make commands quiet.
+	* header.am: Make commands quiet.
+	* data.am: Make commands quiet.
+
 	* automake.in (variable_value_as_list): Handle := substitution
 	references.
 	(am_conf_line_error): Take file argument.  Changed all callers.
